# pandacore

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  backend.rs  codegen.rs  context.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  translation.rs
src/locales/: en-US.json  pt-BR.json
